# price-alert-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260321_0001_initial_schema.py
src/carousell_alert_bot/: __init__.py  config.py  contracts.py  main_bot.py  main_worker.py  utils.py
src/carousell_alert_bot/bot/: __init__.py  handlers.py  keyboards.py  states.py
src/carousell_alert_bot/db/: __init__.py  base.py  models.py  session.py
src/carousell_alert_bot/providers/: carousell.py  interfaces.py  llm.py  notifier.py  reference_price.py
src/carousell_alert_bot/repositories/: __init__.py  listing_repository.py  user_repository.py  watch_repository.py
src/carousell_alert_bot/services/: comps.py  scan_service.py  watch_service.py
src/carousell_alert_bot/worker/: __init__.py  runner.py
tests/: support.py  test_carousell_parser.py  test_comparison_service.py  test_config.py  test_db_models.py  test_llm_provider.py  test_reference_price_provider.py  test_scan_pipeline.py  test_watch_service.py
tests/fixtures/carousell/: detail_page.html  search_results.html  search_results_updated.html
