[project]
name = "carousell-price-alert-bot"
version = "0.1.0"
description = "Telegram bot that scans Carousell for deals and alerts users."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiogram>=3.25.0,<4.0.0",
  "alembic>=1.16.0,<2.0.0",
  "aiosqlite>=0.21.0,<1.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "beautifulsoup4>=4.12.0,<5.0.0",
  "greenlet>=3.0.0",
  "httpx>=0.28.0,<1.0.0",
  "openai>=2.11.0,<3.0.0",
  "playwright>=1.52.0,<2.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "sqlalchemy>=2.0.39,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.11.0,<1.0.0",
]

[project.scripts]
carousell-bot = "carousell_alert_bot.main_bot:main"
carousell-worker = "carousell_alert_bot.main_worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/carousell_alert_bot"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
